[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=1.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradsim"
version = "0.0.4"
description = "Differentiable simulation for system identification and visuomotor control"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Krishna Murthy Jatavallabhula"}
]
keywords = ["differentiable simulation", "physics", "rendering", "deep learning", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=1.3.0",
    "numpy",
    "Pillow",
    "imageio",
    "pyyaml",
    "h5py",
    "tqdm",
    "matplotlib",
    "pygame",
    "torchdiffeq",
]

[project.optional-dependencies]
dev = [
    "pytest>=4.6",
    "pytest-cov>=2.7",
    "black",
    "flake8",
    "isort",
]
docs = [
    "sphinx>=4.0",
]

[project.urls]
Homepage = "https://github.com/gradsim/gradsim"
Repository = "https://github.com/gradsim/gradsim"
Documentation = "https://gradsim.github.io"

[tool.setuptools]
packages = ["gradsim", "gradsim.utils", "gradsim.renderutils", "gradsim.renderutils.dibr", "gradsim.dflex"]
include-package-data = true

[tool.setuptools.package-data]
gradsim = ["assets/*.obj", "dflex/*.h"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
