[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxsim"
version = "0.1.0"
description = "jaxsim: JAX rewrite of gradSim — differentiable physics and rendering"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Krishna Murthy Jatavallabhula"}
]
keywords = ["differentiable simulation", "physics", "rendering", "jax", "cloth", "rigid body"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "Pillow",
    "imageio",
    "pyyaml",
    "h5py",
    "tqdm",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=4.6",
    "pytest-cov>=2.7",
    "black",
    "flake8",
    "isort",
]
docs = [
    "sphinx>=4.0",
]

[project.urls]
Homepage = "https://github.com/gradsim/gradsim"
Repository = "https://github.com/gradsim/gradsim"

[tool.setuptools]
packages = [
    "jaxsim",
    "jaxsim.utils",
    "jaxsim.renderutils",
    "jaxsim.renderutils.dibr",
    "jaxsim.dflex",
]
include-package-data = true

[tool.setuptools.package-data]
jaxsim = ["assets/*.obj", "dflex/*.h"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
